--- a/public/index.html
+++ b/public/index.html
@@ -36,22 +36,35 @@
                         <span class="burger_footer"></span>
                     </span>
                 </button>
-                    <div class="menu_active">
-                        <nav>
-                            <ul>
-                                <li><a href="#" class="active">Новини</a></li>
-                                <li>:</li>
-                                <li><a href="#">Україна</a></li>
-                                <li><a href="#">Світ</a></li>
-                                <li><a href="#">Політика</a></li>
-                                <li><a href="#">Кримінал</a></li>
-                                <li><a href="#">Економіка</a></li>
-                                <li><a href="#">Спорт</a></li>
-                                <li><a href="#">Фото</a></li>
-                                <li><a href="#">Авто</a></li>
-                            </ul>
-                        </nav>
-                    </div>
+                <nav>
+                    <ul>
+                        <li><a href="#" class="active">Новини</a></li>
+                        <li>:</li>
+                        <li><a href="#">Україна</a></li>
+                        <li><a href="#">Світ</a></li>
+                        <li><a href="#">Політика</a></li>
+                        <li><a href="#">Кримінал</a></li>
+                        <li><a href="#">Економіка</a></li>
+                        <li><a href="#">Спорт</a></li>
+                        <li><a href="#">Фото</a></li>
+                        <li><a href="#">Авто</a></li>
+                    </ul>
+                </nav>
+                <div class="menu-active">
+                    <nav>
+                        <ul>
+                            <li><a href="#" class="active">Новини</a></li>
+                            <li><a href="#">Україна</a></li>
+                            <li><a href="#">Світ</a></li>
+                            <li><a href="#">Політика</a></li>
+                            <li><a href="#">Кримінал</a></li>
+                            <li><a href="#">Економіка</a></li>
+                            <li><a href="#">Спорт</a></li>
+                            <li><a href="#">Фото</a></li>
+                            <li><a href="#">Авто</a></li>
+                        </ul>
+                    </nav>
+                </div>
                 <div class="search-icon">
                     <i class="fa fa-search fa-2x"></i>
                 </div>
