--- a/public/index.html
+++ b/public/index.html
@@ -51,19 +51,17 @@
                     </ul>
                 </nav>
                 <div class="menu-active">
-                    <nav>
-                        <ul>
-                            <li><a href="#" class="active">Новини</a></li>
-                            <li><a href="#">Україна</a></li>
-                            <li><a href="#">Світ</a></li>
-                            <li><a href="#">Політика</a></li>
-                            <li><a href="#">Кримінал</a></li>
-                            <li><a href="#">Економіка</a></li>
-                            <li><a href="#">Спорт</a></li>
-                            <li><a href="#">Фото</a></li>
-                            <li><a href="#">Авто</a></li>
-                        </ul>
-                    </nav>
+                    <ul>
+                        <li><a href="#">Новини</a></li>
+                        <li><a href="#">Україна</a></li>
+                        <li><a href="#">Світ</a></li>
+                        <li><a href="#">Політика</a></li>
+                        <li><a href="#">Кримінал</a></li>
+                        <li><a href="#">Економіка</a></li>
+                        <li><a href="#">Спорт</a></li>
+                        <li><a href="#">Фото</a></li>
+                        <li><a href="#">Авто</a></li>
+                    </ul>
                 </div>
                 <div class="search-icon">
                     <i class="fa fa-search fa-2x"></i>
@@ -85,7 +83,7 @@
     <!-- Content start -->
     <div class="content">
         <!-- News-feed start -->
-        <section id="news-feed" >
+        <section id="news-feed">
             <div class="viewport">
                 <div class="last-news">
                     <div class="last-news__title">
@@ -93,7 +91,8 @@
                     </div>
                     <div class="last-news__item">
                         <div class="last-news__time">10:45</div>
-                        <div class="last-news__link"><a href="#">Українським заробітчанам в Італії везли новорічні пакунки з
+                        <div class="last-news__link"><a href="#">Українським заробітчанам в Італії везли новорічні
+                            пакунки з
                             набоями для автоматів</a></div>
                     </div>
                     <div class="last-news__item">
@@ -104,14 +103,16 @@
                     </div>
                     <div class="last-news__item">
                         <div class="last-news__time">7:45</div>
-                        <div class="last-news__link"><a href="#">У Сирії розбився російський бойовий вертоліт, є загиблі</a>
+                        <div class="last-news__link"><a href="#">У Сирії розбився російський бойовий вертоліт, є
+                            загиблі</a>
                         </div>
                     </div>
                     <div class="more-link"><a href="#">Більше новин</a></div>
                 </div>
                 <div class="widgets-top">
                     <div class="widgets-top__item">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae eum iusto labore quam. Adipisci at
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae eum iusto labore quam. Adipisci
+                        at
 
                         voluptatibus!
                     </div>
@@ -176,7 +177,7 @@
                     <div class="readable-content">
                         <ul>
                             <li><a href="#">"Інтер" і СТБ показували радянські фільми
-                                на  Новий рік: Нацрада відреагувала</a></li>
+                                на Новий рік: Нацрада відреагувала</a></li>
                             <li><a href="#">Невідомі спалили авто громадського
                                 "контролера" справи Ноздровської</a></li>
                             <li><a href="#">Вихідні-2018: Кабмін затвердив
@@ -195,7 +196,8 @@
                     <div class="day-news__content">
                         <div class="day-news__img">
                             <a href="#"><img src="img/day-news.jpg" alt="alt">
-                            <div class="overlay"></div></a>
+                                <div class="overlay"></div>
+                            </a>
                         </div>
                         <ul>
                             <li><a href="#" id="first-item">З'явилися нові подробиці Смоленської
