--- a/public/index.html
+++ b/public/index.html
@@ -209,6 +209,9 @@
                         </ul>
                     </div>
                 </div>
+                <div class="publications">
+
+                </div>
             </div>
         </section>
         <!-- Actual-news end -->
