--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,12 @@
                     </div>
                 </div>
                 <div class="publications">
+                    <div class="headings-title">
+                        <h4><a href="#">пУБЛІКАЦІЇ</a></h4>
+                    </div>
+                    <div class="publications-content">
 
+                    </div>
                 </div>
             </div>
         </section>
