--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,41 @@
                         <h4><a href="#">пУБЛІКАЦІЇ</a></h4>
                     </div>
                     <div class="publications-content">
-
+                        <div class="publications-block publications-block__top"><a href="#">
+                            <div class="publications-block__author">Володимир фінгерт.<span>11 січня 2018</span></div>
+                            <div class="publications-block__title">Тисячі українців захворіли на кір. Чим небезпечна
+                                хвороба
+                            </div>
+                            <p>
+                                Через відмову від вакцинації в Україні
+                                все більше людей хворіють на кір. Перші симптоми та лікування
+                            </p>
+                        </a>
+                        </div>
+                        <div class="publications-block publications-block__bottom"><a href="#">
+                            <div class="publications-block__title--bottom">
+                                Вбивство правозахисниці Ноздровської.
+                                Всі подробиці
+                            </div>
+                            <p>На Київщині жорстоко вбили правозахисницю Ірину Ноздровську.
+Всі деталі вбивства</p>
+                            <div class="publications-block__author">
+                                Володимир фінгерт.<span>11 січня 2018</span>
+                            </div>
+                        </a>
+                        </div>
+                        <div class="publications-block publications-block__bottom"><a href="#">
+                            <div class="publications-block__title--bottom">
+                                Вбивство правозахисниці Ноздровської.
+                                Всі подробиці
+                            </div>
+                            <p>На Київщині жорстоко вбили правозахисницю Ірину Ноздровську.
+                                Всі деталі вбивства</p>
+                            <div class="publications-block__author">
+                                Володимир фінгерт.<span>11 січня 2018</span>
+                            </div>
+                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
