--- a/public/index.html
+++ b/public/index.html
@@ -254,6 +254,11 @@
             </div>
         </section>
         <!-- Actual-news end -->
+        <section class="video">
+            <div class="viewport">
+                dcvdcvd
+            </div>
+        </section>
     </div>
     <footer id="footer">
         <div class="viewport">
