--- a/public/index.html
+++ b/public/index.html
@@ -254,9 +254,24 @@
             </div>
         </section>
         <!-- Actual-news end -->
-        <section class="video">
+        <section id="video">
             <div class="viewport">
-                dcvdcvd
+                <div class="video-block1"><a href="#">
+                    <div class="video-block1__wrapper">
+                        <img src="img/video1.jpg" alt="alt">
+                        <div class="overlay"></div>
+                        <div class="video-icon"><i class="fa fa-play-circle fa-5x"></i></div>
+                    </div>
+                    <div class="video-block1__title">Владимир Чердак: "Украинских хоккеистов в России
+                        заставляют сдавать экзамен по русскому языку и
+                        отвечать на странные вопросы из разряда "Чей Крым?""
+
+                    </div>
+                </a>
+                </div>
+                <div class="video-block2">
+                    vdfvfv
+                </div>
             </div>
         </section>
     </div>
