--- a/public/index.html
+++ b/public/index.html
@@ -256,19 +256,20 @@
         <!-- Actual-news end -->
         <section id="video">
             <div class="viewport">
-                <div class="video-block1"><a href="#">
+                <div class="video-block1">
                     <div class="video-block1__wrapper">
                         <img src="img/video1.jpg" alt="alt">
                         <div class="overlay"></div>
                         <div class="video-icon"><i class="fa fa-play-circle fa-5x"></i></div>
                     </div>
-                    <div class="video-block1__title">Владимир Чердак: "Украинских хоккеистов в России
-                        заставляют сдавать экзамен по русскому языку и
-                        отвечать на странные вопросы из разряда "Чей Крым?""
+                    <a href="#">
+                        <div class="video-block1__title">Владимир Чердак: "Украинских хоккеистов в России
+                            заставляют сдавать экзамен по русскому языку и
+                            отвечать на странные вопросы из разряда "Чей Крым?""
 
+                        </div>
+                    </a>
                     </div>
-                </a>
-                </div>
                 <div class="video-block2">
                     vdfvfv
                 </div>
