--- a/public/index.html
+++ b/public/index.html
@@ -254,6 +254,7 @@
             </div>
         </section>
         <!-- Actual-news end -->
+        <!-- Video start -->
         <section id="video">
             <div class="viewport">
                 <div class="video-block1">
@@ -275,6 +276,7 @@
                 </div>
             </div>
         </section>
+        <!-- Video end -->
     </div>
     <footer id="footer">
         <div class="viewport">
