--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@
                     </a>
                     </div>
                 <div class="video-block2">
-                    vdfvfv
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi aspernatur blanditiis cupiditate debitis fuga laudantium mollitia officia pariatur perspiciatis, quam quidem reiciendis reprehenderit sint tempora temporibus vitae. Deleniti dolorum et exercitationem facilis perferendis!
                 </div>
             </div>
         </section>
