--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,36 @@
                     </a>
                     </div>
                 <div class="video-block2">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi aspernatur blanditiis cupiditate debitis fuga laudantium mollitia officia pariatur perspiciatis, quam quidem reiciendis reprehenderit sint tempora temporibus vitae. Deleniti dolorum et exercitationem facilis perferendis!
+                    <div class="video-block2__item">
+                        <div class="video-block2__img--wrapper">
+                            <a href="#"><img src="img/video2.jpg" alt="">
+                            <div class="overlay"></div></a>
+                        </div>
+                        <div class="video-block2__date">10 січня, 04:39</div>
+                        <div class="video-block2__title"><a href="#">Нові правила поводження зі
+                            сміттям: що треба знати українцям</a></div>
+                        <div class="video-block2__more">
+                            <i class="fa fa-video-camera"></i>
+                            <a href="#">новини України</a>
+                        </div>
+                    </div>
+                    <div class="video-block2__item">
+                        <div class="video-block2__img--wrapper">
+                            <a href="#"><img src="img/video2.jpg" alt="">
+                                <div class="overlay"></div></a>
+                        </div>
+                        <div class="video-block2__date">10 січня, 04:39</div>
+                        <div class="video-block2__title"><a href="#">Нові правила поводження зі
+                            сміттям: що треба знати українцям</a></div>
+                        <div class="video-block2__more">
+                            <i class="fa fa-video-camera"></i>
+                            <a href="#">новини України</a>
+                        </div>
+                    </div>
+                    <div class="video-all">
+                        <i class="fa fa-video-camera"></i>
+                        <a href="#">новини України</a>
+                    </div>
                 </div>
             </div>
         </section>
