--- a/public/index.html
+++ b/public/index.html
@@ -300,12 +300,17 @@
                     </div>
                     <div class="video-all">
                         <i class="fa fa-video-camera"></i>
-                        <a href="#">новини України</a>
+                        <a href="#">всі відео</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Video end -->
+        <section class="polls-humor">
+            <div class="viewport">
+                cacac
+            </div>
+        </section>
     </div>
     <footer id="footer">
         <div class="viewport">
