--- a/public/index.html
+++ b/public/index.html
@@ -306,11 +306,18 @@
             </div>
         </section>
         <!-- Video end -->
+        <!-- Polls-humor start -->
         <section class="polls-humor">
             <div class="viewport">
-                cacac
+                <div class="polls">
+                    cdscsc
+                </div>
+                <div class="humor">
+                    ccacac
+                </div>
             </div>
         </section>
+        <!-- Polls-humor end -->
     </div>
     <footer id="footer">
         <div class="viewport">
