--- a/public/index.html
+++ b/public/index.html
@@ -310,10 +310,10 @@
         <section class="polls-humor">
             <div class="viewport">
                 <div class="polls">
-                    cdscsc
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut delectus dolorem eos molestiae pariatur perferendis sed voluptas? Beatae deleniti dignissimos expedita molestiae omnis.
                 </div>
                 <div class="humor">
-                    ccacac
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur consequuntur dolor et ipsa pariatur qui ratione similique vitae. Adipisci minus nostrum totam voluptate.
                 </div>
             </div>
         </section>
