--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,7 @@
         </section>
         <!-- Video end -->
         <!-- Polls-humor start -->
-        <section class="polls-humor">
+        <section id="polls-humor">
             <div class="viewport">
                 <div class="polls">
                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut delectus dolorem eos molestiae pariatur perferendis sed voluptas? Beatae deleniti dignissimos expedita molestiae omnis.
