--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
                                 Всі подробиці
                             </div>
                             <p>На Київщині жорстоко вбили правозахисницю Ірину Ноздровську.
-Всі деталі вбивства</p>
+                                Всі деталі вбивства</p>
                             <div class="publications-block__author">
                                 Володимир фінгерт.<span>11 січня 2018</span>
                             </div>
@@ -270,12 +270,13 @@
 
                         </div>
                     </a>
-                    </div>
+                </div>
                 <div class="video-block2">
                     <div class="video-block2__item">
                         <div class="video-block2__img--wrapper">
                             <a href="#"><img src="img/video2.jpg" alt="">
-                            <div class="overlay"></div></a>
+                                <div class="overlay"></div>
+                            </a>
                         </div>
                         <div class="video-block2__date">10 січня, 04:39</div>
                         <div class="video-block2__title"><a href="#">Нові правила поводження зі
@@ -288,7 +289,8 @@
                     <div class="video-block2__item">
                         <div class="video-block2__img--wrapper">
                             <a href="#"><img src="img/video2.jpg" alt="">
-                                <div class="overlay"></div></a>
+                                <div class="overlay"></div>
+                            </a>
                         </div>
                         <div class="video-block2__date">10 січня, 04:39</div>
                         <div class="video-block2__title"><a href="#">Нові правила поводження зі
@@ -310,10 +312,25 @@
         <section id="polls-humor">
             <div class="viewport">
                 <div class="polls">
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut delectus dolorem eos molestiae pariatur perferendis sed voluptas? Beatae deleniti dignissimos expedita molestiae omnis.
+                    <div class="headings-title">
+                        <h4><a href="#">Читаєме</a></h4>
+                    </div>
+                    <div class="polls__wrapper">
+                        <div class="polls__title">
+                            <h4>Чи варто штрафувати українських зірок за виступи в Росії?</h4>
+                        </div>
+                        <div class="polls__item">
+                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls1"></label></div>
+                            <div class="polls__link">
+                                <a href="#">Так , хоч грошима компенсують виступи для агресора!</a>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
                 <div class="humor">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur consequuntur dolor et ipsa pariatur qui ratione similique vitae. Adipisci minus nostrum totam voluptate.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur consequuntur dolor et ipsa
+                    pariatur qui ratione similique vitae. Adipisci minus nostrum totam voluptate.
                 </div>
             </div>
         </section>
