--- a/public/index.html
+++ b/public/index.html
@@ -321,11 +321,28 @@
                         </div>
                         <div class="polls__item">
                             <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls1"></label></div>
-                            <div class="polls__link">
-                                <a href="#">Так , хоч грошима компенсують виступи для агресора!</a>
+                            <div class="polls__variants">
+                                Так , хоч грошима компенсують виступи для агресора!
                             </div>
                         </div>
-
+                        <div class="polls__item">
+                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls2"></label></div>
+                            <div class="polls__variants">
+                                Ні, кожен має право працювати, де хоче
+                            </div>
+                        </div>
+                        <div class="polls__item">
+                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls3"></label></div>
+                            <div class="polls__variants">
+                                Потрібно взагалі таким артистам виступати на території України
+                            </div>
+                        </div>
+                        <div class="polls__item">
+                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls4"></label></div>
+                            <div class="polls__variants">
+                                Ваш варіант (пишіть у коментарях)
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="humor">
