--- a/public/index.html
+++ b/public/index.html
@@ -320,28 +320,20 @@
                             <h4>Чи варто штрафувати українських зірок за виступи в Росії?</h4>
                         </div>
                         <div class="polls__item">
-                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls1"></label></div>
-                            <div class="polls__variants">
-                                Так , хоч грошима компенсують виступи для агресора!
-                            </div>
+                            <input id="variant1" type="radio" name="radioButton" value="polls1">
+                            <label for="variant1"><span>Так , хоч грошима компенсують виступи для агресора!Так , хоч грошима компенсують виступи для агресора!</span></label>
                         </div>
                         <div class="polls__item">
-                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls2"></label></div>
-                            <div class="polls__variants">
-                                Ні, кожен має право працювати, де хоче
-                            </div>
+                            <input id="variant2" type="radio" name="radioButton" value="polls1">
+                            <label for="variant2"><span>Ні, кожен має право працювати, де хоче</span></label>
                         </div>
                         <div class="polls__item">
-                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls3"></label></div>
-                            <div class="polls__variants">
-                                Потрібно взагалі таким артистам виступати на території України
-                            </div>
+                            <input id="variant3" type="radio" name="radioButton" value="polls1">
+                            <label for="variant3"><span>Потрібно взагалі таким артистам виступати на території України</span></label>
                         </div>
                         <div class="polls__item">
-                            <div class="polls__icon"><label><input type="radio" name="radioButton" value="polls4"></label></div>
-                            <div class="polls__variants">
-                                Ваш варіант (пишіть у коментарях)
-                            </div>
+                            <input id="variant4" type="radio" name="radioButton" value="polls1">
+                            <label for="variant4"><span>Ваш варіант (пишіть у коментарях)</span></label>
                         </div>
                     </div>
                 </div>
