--- a/public/index.html
+++ b/public/index.html
@@ -341,7 +341,15 @@
                     </div>
                 </div>
                 <div class="humor">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur dolorem enim labore maiores officia quaerat quia? Ad alias aperiam atque consequuntur cumque deserunt dicta ducimus earum eius et facilis fugit illo inventore laborum minima, molestias non obcaecati odit quasi quibusdam quis quos rem reprehenderit sed vel velit vero vitae. Adipisci alias animi deleniti distinctio doloremque doloribus expedita fuga, illum iste labore maiores minima modi nam necessitatibus nihil nulla odit omnis possimus quaerat repudiandae! Asperiores aspernatur consectetur consequatur corporis cupiditate dicta eligendi enim, explicabo facilis in iste labore magnam modi obcaecati odit optio pariatur perspiciatis quam, quasi quia quis quo repellendus suscipit veniam vero vitae voluptas, voluptatibus. Animi aperiam asperiores assumenda at autem corporis dolor doloribus et eum eveniet exercitationem incidunt laboriosam magnam, nisi nobis officiis optio pariatur perspiciatis qui quos ratione reiciendis sequi sit soluta, suscipit tempora ullam. Ab architecto atque consectetur enim explicabo incidunt iste quisquam, reprehenderit sequi tempore. Alias aliquid animi architecto asperiores assumenda cumque delectus eius enim impedit in ipsam iste laboriosam minus natus, non porro praesentium quaerat quam ratione sunt ullam velit voluptates. Ad amet animi assumenda beatae delectus distinctio, explicabo facilis fugiat laudantium mollitia natus neque nesciunt praesentium, qui quis repudiandae sint voluptatibus? Aliquid aspernatur assumenda aut consequuntur doloribus, dolorum eos esse et harum illum itaque labore laudantium libero maxime minus molestiae nostrum numquam perferendis placeat recusandae soluta sunt temporibus ullam voluptates voluptatibus? Ab debitis incidunt itaque rerum similique!
+                    <div class="headings-title">
+                        <h4><a href="#">Читаєме</a></h4>
+                    </div>
+                    <div class="humor__img">
+                        <a href="#">
+                            <img src="img/humor.jpg" alt="">
+                            <div class="overlay"></div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
