--- a/public/index.html
+++ b/public/index.html
@@ -342,7 +342,7 @@
                 </div>
                 <div class="humor">
                     <div class="headings-title">
-                        <h4><a href="#">Читаєме</a></h4>
+                        <h4><a href="#">карикатура дня</a></h4>
                     </div>
                     <div class="humor__img">
                         <a href="#">
@@ -354,6 +354,26 @@
             </div>
         </section>
         <!-- Polls-humor end -->
+        <!-- Social-networks start -->
+        <section id="social-networks">
+            <div class="viewport">
+                <div class="headings-title">
+                    <h4><a href="#">ми у соціальних мережах</a></h4>
+                </div>
+               <div class="social-networks__wrapper">
+                   <div class="social-networks__item">
+                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia, omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem, sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi vitae. Animi atque eius harum modi possimus sed tenetur.
+                   </div>
+                   <div class="social-networks__item">
+                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia, omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem, sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi vitae. Animi atque eius harum modi possimus sed tenetur.
+                   </div>
+                   <div class="social-networks__item">
+                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia, omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem, sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi vitae. Animi atque eius harum modi possimus sed tenetur.
+                   </div>
+               </div>
+            </div>
+        </section>
+        <!-- Social-networks end -->
     </div>
     <footer id="footer">
         <div class="viewport">
