--- a/public/index.html
+++ b/public/index.html
@@ -377,11 +377,20 @@
     </div>
     <footer id="footer">
         <div class="viewport">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus asperiores, assumenda cum, dicta facilis
-            iusto maxime minus nam non praesentium tempore unde ut, voluptatum! Assumenda corporis, culpa dolore earum
-            ex, inventore ipsum molestias nisi provident quaerat, quo saepe sapiente vero vitae voluptas! A atque dolor,
-            eaque expedita itaque maiores praesentium quisquam repudiandae temporibus voluptatibus? Assumenda,
-            reiciendis.
+            <div class="social-footer">
+                <span>&copy;2018 Enot.com</span>
+                <div class="social-icons">
+                    <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                    <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
+                    <a href="#"><i class="fa fa-youtube fa-lg"></i></a>
+                </div>
+            </div>
+            <div class="footer-forbid">
+                <p>Все права защищены. Копирование информации разрешено только при наличии активной гиперссылки на сайт. Администрация сайта не несет ответственности за новости партнеров и внешние источники.</p>
+                <p>
+                Редакция соблюдает закон Украины "О печатных средствах массовой информации (прессе) в Украине" Ст. 34 Конституция Украины. Закон Украины "О информации"
+            </p>
+            </div>
         </div>
     </footer>
 </div>
