--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                         </div>
                         <div class="polls__item">
                             <input id="variant1" type="radio" name="radioButton" value="polls1">
-                            <label for="variant1"><span>Так , хоч грошима компенсують виступи для агресора!Так , хоч грошима компенсують виступи для агресора!</span></label>
+                            <label for="variant1"><span>Так ,хоч грошима компенсують виступи для агресора!</span></label>
                         </div>
                         <div class="polls__item">
                             <input id="variant2" type="radio" name="radioButton" value="polls1">
