--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                     <ul>
                         <li><a href="#" class="active">Новини</a></li>
                         <li>:</li>
-                        <li><a href="#">Україна</a></li>
+                        <li><a href="page.html">Україна</a></li>
                         <li><a href="#">Світ</a></li>
                         <li><a href="#">Політика</a></li>
                         <li><a href="#">Кримінал</a></li>
