--- a/public/page.html
+++ b/public/page.html
@@ -90,9 +90,11 @@
                 </div>
             </div>
             <div class="footer-forbid">
-                <p>Все права защищены. Копирование информации разрешено только при наличии активной гиперссылки на сайт. Администрация сайта не несет ответственности за новости партнеров и внешние источники.</p>
+                <p>Все права защищены. Копирование информации разрешено только при наличии активной гиперссылки на сайт.
+                    Администрация сайта не несет ответственности за новости партнеров и внешние источники.</p>
                 <p>
-                    Редакция соблюдает закон Украины "О печатных средствах массовой информации (прессе) в Украине" Ст. 34 Конституция Украины. Закон Украины "О информации"
+                    Редакция соблюдает закон Украины "О печатных средствах массовой информации (прессе) в Украине" Ст.
+                    34 Конституция Украины. Закон Украины "О информации"
                 </p>
             </div>
         </div>
