--- a/public/index.html
+++ b/public/index.html
@@ -360,17 +360,44 @@
                 <div class="headings-title">
                     <h4><a href="#">ми у соціальних мережах</a></h4>
                 </div>
-               <div class="social-networks__wrapper">
-                   <div class="social-networks__item">
-                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia, omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem, sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi vitae. Animi atque eius harum modi possimus sed tenetur.
-                   </div>
-                   <div class="social-networks__item">
-                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia, omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem, sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi vitae. Animi atque eius harum modi possimus sed tenetur.
-                   </div>
-                   <div class="social-networks__item">
-                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia, omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem, sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi vitae. Animi atque eius harum modi possimus sed tenetur.
-                   </div>
-               </div>
+                <div class="social-networks__wrapper">
+                    <div class="social-networks__item">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi
+                        eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum
+                        exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia,
+                        omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore
+                        laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem,
+                        sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente
+                        voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore
+                        molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum
+                        similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi
+                        vitae. Animi atque eius harum modi possimus sed tenetur.
+                    </div>
+                    <div class="social-networks__item">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi
+                        eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum
+                        exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia,
+                        omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore
+                        laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem,
+                        sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente
+                        voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore
+                        molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum
+                        similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi
+                        vitae. Animi atque eius harum modi possimus sed tenetur.
+                    </div>
+                    <div class="social-networks__item">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dicta doloremque, eligendi
+                        eos et harum quis. Ab accusamus aliquid assumenda atque consequuntur corporis, ea eum
+                        exercitationem facere iste mollitia nesciunt non nostrum qui quo quos tempora? Cumque mollitia,
+                        omnis! Alias aliquid consectetur cupiditate deleniti ea eius error eum fuga incidunt inventore
+                        laboriosam magni maiores nemo nostrum, obcaecati officiis quaerat quasi qui quis quisquam rem,
+                        sit suscipit tempore tenetur velit! Blanditiis commodi culpa magni nam neque placeat, sapiente
+                        voluptatum. Alias aliquam consequatur, debitis dolorem dolorum est, eum fuga incidunt labore
+                        molestias natus nihil nostrum obcaecati, pariatur provident qui quia quibusdam ratione rem rerum
+                        similique sit sunt. Adipisci consequatur dolores laboriosam molestias natus nihil officia quasi
+                        vitae. Animi atque eius harum modi possimus sed tenetur.
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Social-networks end -->
@@ -386,10 +413,12 @@
                 </div>
             </div>
             <div class="footer-forbid">
-                <p>Все права защищены. Копирование информации разрешено только при наличии активной гиперссылки на сайт. Администрация сайта не несет ответственности за новости партнеров и внешние источники.</p>
+                <p>Все права защищены. Копирование информации разрешено только при наличии активной гиперссылки на сайт.
+                    Администрация сайта не несет ответственности за новости партнеров и внешние источники.</p>
                 <p>
-                Редакция соблюдает закон Украины "О печатных средствах массовой информации (прессе) в Украине" Ст. 34 Конституция Украины. Закон Украины "О информации"
-            </p>
+                    Редакция соблюдает закон Украины "О печатных средствах массовой информации (прессе) в Украине" Ст.
+                    34 Конституция Украины. Закон Украины "О информации"
+                </p>
             </div>
         </div>
     </footer>
