--- a/public/page.html
+++ b/public/page.html
@@ -78,7 +78,60 @@
         </div>
         <!-- Top menu end -->
     </header>
-    <div class="content"></div>
+    <div class="content viewport page-block">
+        <div class="block-left">
+            <h2>УКРАЇНА</h2>
+            <div class="block-left__item-case">
+                <div class="block-left__item-case1">
+                    <a href="#"><img src="img/page.jpg" alt="">
+                        <div class="overlay"></div>
+                    </a>
+                </div>
+                <div class="block-left__item-case2">
+                    <span> Володимир Фінгерт</span>
+                    <div class="block-left__item-title">
+                        <a href="#">"Политические трупы", Аваков и Кива: кто и
+                            зачем скандалит в одной из самых известных
+                            партий Украины</a>
+                    </div>
+                    <div class="block-left__item-description">
+                        <p>Вокруг одной из самых популярных некогда политических сил
+                            Украины - Социалистической партии - снова начались конфликты.
+                            Председатель партии Илья Кива, лидер партии Петр Устенко и
+                            еще один политик, объявивший себя социалистом, народный
+                            депутат Сергей Каплин, не могут поделить лидерство. </p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="block-left__item-case">
+                <div class="block-left__item-case1">
+                    <a href="#"><img src="img/page.jpg" alt="">
+                        <div class="overlay"></div>
+                    </a>
+                </div>
+                <div class="block-left__item-case2">
+                    <span> Володимир Фінгерт</span>
+                    <div class="block-left__item-title">
+                        <a href="#">"Политические трупы", Аваков и Кива: кто и
+                            зачем скандалит в одной из самых известных
+                            партий Украины</a>
+                    </div>
+                    <div class="block-left__item-description">
+                        <p>Вокруг одной из самых популярных некогда политических сил
+                            Украины - Социалистической партии - снова начались конфликты.
+                            Председатель партии Илья Кива, лидер партии Петр Устенко и
+                            еще один политик, объявивший себя социалистом, народный
+                            депутат Сергей Каплин, не могут поделить лидерство. </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="block-right">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, beatae blanditiis consequuntur deserunt dolore doloremque ducimus ea earum eos exercitationem facilis fuga fugiat fugit in iste, labore molestiae necessitatibus nisi nobis numquam odio omnis perferendis quae qui quibusdam quos recusandae repellat reprehenderit rerum similique sint voluptate voluptatem voluptatum. Commodi ea eum, eveniet harum illo, impedit incidunt labore magnam, maiores neque nihil nisi odit placeat qui sint temporibus vel? Aliquam aspernatur, autem delectus facere, iusto magni maiores, minus numquam pariatur quod repudiandae totam veritatis voluptatibus. Ab atque blanditiis culpa cumque cupiditate dignissimos dolor ea enim error eveniet, fugit harum id iusto laboriosam laborum libero minima mollitia officia porro quam qui quo sed suscipit vel velit voluptas voluptate voluptatibus? Alias autem cum, deleniti, dicta distinctio ea error fugiat harum in iure molestiae, nemo nesciunt non officia quod rerum ullam vel velit veritatis voluptatum. Aliquam amet aspernatur assumenda at atque beatae cumque debitis dicta dignissimos doloribus, dolorum, ducimus ea earum esse, eveniet fugiat harum hic id illo iusto laborum mollitia necessitatibus nesciunt nostrum perferendis perspiciatis praesentium provident quis rem reprehenderit rerum saepe sapiente similique sit suscipit velit voluptates? Alias esse laborum sapiente sit? Accusamus ad adipisci alias amet animi aperiam architecto consectetur dolor, eaque excepturi incidunt iste officia quam quasi quia rem saepe sint soluta tempore vero! Accusamus debitis, dignissimos dolorem ducimus ea harum ipsam iste quae quam quod reiciendis unde voluptatum. Assumenda blanditiis dicta distinctio id ipsa obcaecati officia omnis soluta! Ad amet expedita facilis id iure libero officia porro provident sit vel! Amet aperiam autem dignissimos eligendi eos explicabo fuga iure, iusto labore laboriosam libero officia pariatur porro quasi quibusdam quod recusandae repudiandae rerum similique tempore veritatis vitae voluptate voluptatibus. Alias assumenda consequuntur distinctio enim eos, iusto neque nostrum odio porro repellat reprehenderit sit, soluta tempore temporibus veritatis? Beatae culpa debitis error excepturi explicabo hic illo, impedit laborum laudantium libero, molestias praesentium provident quod quos rem tempore veritatis voluptate. A, adipisci aliquam at blanditiis cum earum error est expedita nisi perspiciatis placeat provident, quae sapiente ullam veritatis? Commodi cupiditate error laudantium maiores minus officiis omnis sunt.
+        </div>
+    </div>
     <footer id="footer">
         <div class="viewport">
             <div class="social-footer">
