--- a/public/page.html
+++ b/public/page.html
@@ -70,8 +70,8 @@
                         <i class="fa fa-window-close fa-3x"></i>
                     </div>
                     <div class="search-wrapper">
-                        <input type="text" name="search" placeholder="search">
-                        <button type="submit">Знайти</button>
+                        <form><input type="text" name="search" placeholder="search">
+                        <button type="submit">Знайти</button></form>
                     </div>
                 </div>
             </div>
