--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,9 @@
                         <i class="fa fa-window-close fa-3x"></i>
                     </div>
                     <div class="search-wrapper">
-                       <form ><input type="text" name="search" placeholder="search">
-                        <button type="submit">Знайти</button></form>
+                        <form><input type="text" name="search" placeholder="search">
+                            <button type="submit">Знайти</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -406,7 +407,7 @@
         <div class="viewport">
             <div class="social-footer">
                 <span>&copy;2018 Enot.com</span>
-                <div class="social-icons">
+                <div class="social-footer__link">
                     <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
                     <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
                     <a href="#"><i class="fa fa-youtube fa-lg"></i></a>
