--- a/public/page.html
+++ b/public/page.html
@@ -136,8 +136,8 @@
         <div class="viewport">
             <div class="social-footer">
                 <span>&copy;2018 Enot.com</span>
-                <div class="social-icons">
-                    <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                <div class="social-footer__link">
+                    <a href><i class="fa fa-facebook fa-lg"></i></a>
                     <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
                     <a href="#"><i class="fa fa-youtube fa-lg"></i></a>
                 </div>
